Added buttons for pass line / dont pass odds

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   color: black;
 }
 
+#bucketButton-dontPass-odds {
+  color: black;
+}
+
 #bucketButton-field-default {
   width: 100%;
   color: #cccc00;
